# PoseCNN-PyTorch

./: .gitignore  .gitmodules  LICENSE.md  Pipfile  README.md  build.sh  requirement.txt
data/YCB_Self_Supervision/: all.txt  debug.txt  extents.txt  stats.txt  test.txt  train_1.txt  train_2.txt  train_3.txt  train_4.txt  train_5.txt  train_block.txt  train_block_azure.txt  train_block_big_sim.txt  train_block_median.txt  train_block_median_azure.txt  train_block_median_sim.txt  train_block_small_sim.txt  train_table.txt
data/YCB_Video/: debug.txt
data/demo/: meta.yml
experiments/cfgs/: dex_ycb.yml  ycb_object.yml  ycb_object_detection.yml  ycb_object_self_supervision.yml  ycb_video.yml
experiments/scripts/: demo.sh  dex_ycb_test_s0.sh  dex_ycb_test_s1.sh  dex_ycb_test_s2.sh  dex_ycb_test_s3.sh  dex_ycb_test_ycb_video.sh  (+13 more)
ngc/: push_ngc.sh  run_docker.sh  run_test_job.sh  train_ngc.sh
ros/: _init_paths.py  collect_images_realsense.py  posecnn.rviz  test_images.py
tools/: _init_paths.py  test_images.py  test_net.py  train_net.py
ycb_render/: CMakeLists.txt  get_available_devices.py  setup.py  visualize_sim.py  ycb_renderer.py  ycb_renderer_camera.py  ycb_renderer_sim.py  ycb_renderer_tensor.py
ycb_render/cpp/: query_devices.cpp  test_device.cpp  ycb_renderer.cpp
ycb_render/glutils/: glcontext.py  meshutil.py  trackball.py  utils.py
ycb_render/shaders/: frag.shader  frag_blinnphong.shader  frag_mat.shader  frag_simple.shader  frag_textureless.shader  vert.shader  vert_blinnphong.shader  vert_mat.shader  vert_simple.shader  vert_textureless.shader
(+53 files in other folders)
